# MultiBase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: backloggd_games_short.csv
data/testdata/: backloggd_games_short.csv
docs/: DataSetProcessor.drawio  MultiBase.drawio
modules/: DynValues
src/: main.cpp
src/auxillary/headers/: auxillary_classes.hpp  multi_base_common_methods.hpp  split_string.h
src/auxillary/sources/: multi_base_common_methods.cpp
src/column_headers/headers/: AutoIncrementFlag.hpp  IFlag.hpp
src/column_headers/sources/: AutoIncrementFlag.cpp
src/connections/headers/: ITableConnection.hpp
src/csv_parsers/headers/: CSVParser.hpp
src/exceptions/: EndOfTableException.hpp  TableConnectionException.hpp  TableException.hpp  TableIteratorException.hpp  UnableToConnectException.hpp
src/iterators/headers/: BaseTableConstIterator.hpp  BaseTableIterator.hpp  CSVTableConnectionConstIterator.hpp  CSVTableConnectionIterator.hpp  ITableConstIterator.hpp  ITableIterator.hpp  SmartTableIterator.hpp  TableSmartConstIterator.hpp  TableSmartIterator.hpp
src/iterators/sources/: BaseTableConstIterator.cpp  BaseTableIterator.cpp  CSVTableConnectionConstIterator.cpp  CSVTableConnectionIterator.cpp  SmartTableIterator.cpp  TableSmartConstIterator.cpp  TableSmartIterator.cpp
src/parsers/headers/: BaseLineParser.hpp  BaseValueParser.hpp  ILineParser.hpp  IValueParser.hpp
src/parsers/sources/: BaseLineParser.cpp
src/tables/headers/: BaseTable.hpp  CSVTableConnection.hpp  ITable.hpp  table_types.hpp
src/tables/sources/: BaseTable.cpp  CSVTableConnection.cpp
src/tests/: test1.cpp
